--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+    
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -36,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   dots_indicator: ^2.0.0
   flutter_screenutil: ^5.3.1
+  get: ^4.6.1
 
 dev_dependencies:
   flutter_test:
