--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   dots_indicator: ^2.0.0
   flutter_screenutil: ^5.3.1
   get: ^4.6.1
+  http: ^0.13.4
 
 dev_dependencies:
   flutter_test:
